Tue Jul 09 10:27:51 2002  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/server.c,
	  daemon/slave.c, daemon/xdmcp.c:  Fix some errors with server
	  starting, fix alarm/sleep collisions, add a handled flag to
	  servers so that we can setup unhandled X servers (such as
	  for X terminals)

Tue Jul 09 09:14:55 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c: do the display init before the user setup for
	  automatic logins

Tue Jul 09 09:08:25 2002  George Lebl <jirka@5z.com>

	* daemon/auth.c: handle fails on user auth writing by going to the
	  fallback file to handle things in a saner way.  Fixed
	  locking/unlocking to be done properly and fixed leaks in the purge
	  function.

Tue Jul 09 08:44:04 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c: Fix a bug with finding the parent process
	  (Oswald Buddenhagen <ossi@kde.org>)

	* daemon/verify-pam.c: the autologin should do setcred/open_session
	  just like normal login

Mon Jul 08 20:42:27 2002  George Lebl <jirka@5z.com>

	* configure.in, NEWS: raise version add some news

Mon Jul 08 20:01:23 2002  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h, daemon/misc.c, gui/gdmchooser.c:
	  if available include <sys/sockio.h>.  Should fix first
	  part of #86679

	* gui/Makefile.am: link gdmsetup and gdmflexiserver with -lXau,
	  should fix second part of #86679

	* gui/gdmwm.c: Fix #86620, don't set up the wm stuff if the
	  substructureredirect selection fails on the root window.

	* daemon/slave.c: don't clear the env for chooser, greeter and
	  config.  I suppose it was fairly foolish to do so anyway.
	  Should fix #87387 partly

	* configure.in, daemon/gdm.in, daemon/Makefile.am: rename
	  gdm to gdm-binary and install a new script called gdm
	  which calls gdm-binary.  This way the standard env is
	  read in and other good stuff can happen.  Should fix #87387
	  completely

	* gui/gdmchooser.c, gui/gdmlogin.c: properly center windows
